Merge remote-tracking branch 'origin/Vi' into Tam_1
# Conflicts:
#	.idea/workspace.xml
#	cypher/qlkhachsanTATP_db_MariaDB.sql
#	logs/application.log
#	src/main/java/iuh/fit/app/MainApp.java
#	src/main/java/iuh/fit/core/dto/HoaDonDTO.java
#	src/main/java/iuh/fit/core/dto/PhieuDatPhongDTO.java
#	src/main/java/iuh/fit/core/entity/ChiTietHoaDon.java
#	src/main/java/iuh/fit/core/entity/ChiTietHoaDonId.java
#	src/main/java/iuh/fit/core/entity/HoaDon.java
#	src/main/java/iuh/fit/core/entity/NhanVien.java
#	src/main/java/iuh/fit/core/repository/IChiTietHoaDonRepository.java
#	src/main/java/iuh/fit/core/repository/IHoaDonRepository.java
#	src/main/java/iuh/fit/core/service/IHoaDonService.java
#	src/main/java/iuh/fit/core/service/impl/DichVuServiceImpl.java
#	src/main/java/iuh/fit/core/service/impl/HoaDonServiceImpl.java
#	src/main/java/iuh/fit/infrastructure/mapper/HoaDonMapper.java
#	src/main/java/iuh/fit/infrastructure/persistence/ChiTietHoaDonRepositoryImpl.java
#	src/main/java/iuh/fit/infrastructure/persistence/DichVuRepositoryImpl.java
#	src/main/java/iuh/fit/infrastructure/persistence/HoaDonRepositoryImpl.java
#	src/main/java/iuh/fit/presentation/controller/LoginController.java
#	src/main/java/iuh/fit/presentation/controller/MainController.java
#	src/main/java/iuh/fit/presentation/controller/QuanLyDatPhongController.java